# physics_sim

./: CMakeLists.txt  README.md  color.frag  color.vert  debug.sh  dump.sh  lightning.frag  lightning.vert  perf.sh  run.bat  run.sh  shader.frag  shader.vert  test.sh  valgrind.sh  widget.frag  widget.vert
lib/: CMakeLists.txt
lib/stb_truetype/: stb_truetype.h
src/common/: CMakeLists.txt  mg_common.h  mg_debug.h  mg_types.h
src/containers/: CMakeLists.txt  array_list.c  array_list.h  bit_vector.c  bit_vector.h  bitstream.c  bitstream.h  containers.h  dynamic_array.c  dynamic_array.h  hash_index.c  hash_index.h  hierarchy.c  hierarchy.h  list.c  list.h  mg_buffer.h  mg_string.c  mg_string.h  queue.c  queue.h  relation_list.c  relation_list.h  ring_buffer.c  ring_buffer.h
src/math/: CMakeLists.txt  SSE.c  SSE2.c  SSE3.c  SSE4.c  SSE_main.h  dbvt.c  dbvt.h  geometry.c  geometry.h  math.c  matrix.c  matrix.h  mmath.h  quaternion.c  quaternion.h  random.c  random.h  rigid_body.c  rigid_body.h  rigid_body_pipeline.c  rigid_body_pipeline.h  transformation.c  transformation.h  vector.c  vector.h
src/math/debug/: CMakeLists.txt  fINF.c  ieee_754.c  math_debug_common.h  math_debug_local.h  math_debug_public.h
src/memory/: CMakeLists.txt  mem_utils.c  mem_utils.h  mg_mempool.c  mg_mempool.h  serialise.c  serialise.h
src/misc/: CMakeLists.txt  decode.c  decode.h  mg_font.c  mg_font.h  profiler.c  profiler.h  sort.c  sort.h  widget.c  widget.h
src/renderer/: CMakeLists.txt  mgl.h  mgl_primitives.c  mgl_primitives.h  r_buffer.c  r_camera.c  r_command.c  r_common.h  r_init.c  r_local.h  r_main.c  r_primitive.c  r_public.h
src/simulation/: CMakeLists.txt  sim_entity.c  sim_event.c  sim_init.c  sim_local.h  sim_main.c  sim_public.h
src/sys/: CMakeLists.txt  graphics_context.c  system_IO.c  system_common.h  system_event_queue.c  system_init.c  system_input.c  system_local.h  system_public.h  thread.c  thread.h  timer.c  timer.h
src/sys/unix/: CMakeLists.txt  main.c  unix_IO.c  unix_local.h  unix_public.h
src/sys/unix/x11/: CMakeLists.txt  x11_event.c  x11_gl.c  x11_input.c  x11_local.h  x11_public.h  x11_window.c
src/sys/win64/: CMakeLists.txt  WinMain.c  mgl_win64.c  win32_thread.c  win32_thread.h  win_IO.c  win_event.c  win_gl.c  win_init.c  win_input.c  win_local.h  win_public.h  win_window.c
src/sys/win64/GL/: CMakeLists.txt
src/sys/win64/GL/KHR/: CMakeLists.txt
tests/: CMakeLists.txt  test_common.h  test_container.c  test_macro.h  test_main.c  test_math.c  test_public.h
